--- a/commutable.html
+++ b/commutable.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Sorry</title></head>
 <body>
-<pre>Sorry, this experiment has not ended...</pre>
+<pre>Sorry, this experiment has ended...</pre>
 </body>
 </html>
