--- a/imp/index.html
+++ b/imp/index.html
@@ -30,7 +30,7 @@
             line-height: inherit
         }
     </style>
-  <script type="module" crossorigin src="/assets/index.js"></script>
+  <script type="module" crossorigin src="assets/index.js"></script>
 </head>
 <body>
     <div id="App"></div>
